# web-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  eval-nightly.yml
data/bench/: v0.34.2-baseline.json  v0.34.3-fanout-baseline.json  v0.36.0-disk-baseline.json  v0.38.0-before-f2-baseline.json  v0.38.2-after-f2-baseline.json  v0.43.1-default-noise-baseline.json  v0.43.1-spp-baseline.json
data/eval/: baseline-V0.26.4-kimi.json
data/stealth_probes/: sannysoft_20260512_004905.json  sannysoft_20260512_004959.json  v0.48-reuse-cassette-akamai_com_20260512_050503.json  v0.48-reuse-cassette-cloudflare_com_20260512_050430.json  v0.48-reuse-cassette-sannysoft_com_20260512_050341.json
demos/: elicit_showcase.py  github_search.py  gmail_compose.py  gmail_summary.py  wikipedia_search.py
docs/: ARCHITECTURE.md  eval-baseline-V0.26.md  perceive-bench-after-f2-V0.38.2.md  perceive-bench-baseline-V0.34.2.md  perceive-bench-fan-out-V0.34.3.md  perceive-bench-pre-f2-V0.38.0.md  stealth-probe-baseline-V0.39.0.md  高度模仿人操作网页的agent技术路径图.txt
docs/blog-drafts/: 2026-05-build-vs-edit-time-final-en.md  2026-05-build-vs-edit-time-final.md  2026-05-patchright-nogo-final-en.md  2026-05-patchright-nogo-final.md  2026-05-w5c2-spike-story-final-en.md  2026-05-w5c2-spike-story-final.md  2026-05-w5c2-spike-story.md
eval/: __init__.py  cli.py  disk_baseline.py  metrics.py  perceive_bench.py  perceive_bench_adapter.py  predicates.py  pricing.py  report.py  runner.py  token_baseline.py  types.py
eval/cassettes/: .gitkeep
eval/cassettes/real_world/: .gitkeep
eval/corpus/: __init__.py  _fixtures.py  v021_multitab.py  v022_iframe.py  v022_v021_cross_feature.py  v023_drag_upload_download.py  v024_dialog_keyboard.py  v025_recovery.py  v029_chain.py  v030_real_world.py  v032_chain_real_world.py  v035_capability_real_world.py  v040_capability_real_world_extended.py
extension/: README.md  manifest.json  popup.html  popup.js
scripts/: diagnose_kimi_key.sh  reaggregate_w5c2.py  run_w5c2_spike.py  score_upwork.py  start_chrome.sh  test_mcp_local.py
src/web_agent/: __init__.py  actuator.py  browser.py  captcha.py  chain.py  chrome_launcher.py  cli.py  data_clean.py  jd_extract.py  list_extract.py  loop.py  mcp_server.py  memory.py  notify.py  perceiver.py  planner.py  planner_hierarchy.py  protection.py  proxy_util.py  reflect.py  replay.py  routing.py  safety.py  serve.py  trace.py  types.py  vault.py
src/web_agent/llm/: __init__.py  _capabilities.py  _schema.py  anthropic.py  base.py  openai.py
tests/: _smoke_helpers.py  conftest.py  test_actuator.py  test_anti_loop_extract.py  test_browser.py  test_captcha.py  test_chain.py  test_chain_runner.py  test_chrome_launcher.py  test_cli.py  test_data_clean.py  test_demos_smoke.py  test_disk_baseline.py  test_eval_metrics.py  test_eval_reflective.py  test_eval_runner.py  test_eval_smoke.py  test_jd_extract.py  test_list_extract.py  test_llm_anthropic.py  test_llm_capabilities.py  test_llm_openai.py  test_llm_schema.py  test_loop_anti_loop.py  test_loop_drag_upload.py  test_loop_iframe.py  test_loop_main.py  test_loop_multitab.py  test_loop_reflect.py  test_loop_smart_retry.py  test_loop_spike_w5c2.py  test_mcp_server.py  test_memory.py  test_notify.py  test_perceive_bench.py  test_perceive_bench_adapter.py  test_perceive_bench_baseline_v038.py  test_perceive_bench_real.py  test_perceiver.py  test_perceiver_concurrent.py  (+25 more)
tests/cassettes/test_smoke_openai_kimi_real/: test_kimi_plan_smoke_pipeline_alive.yaml
tests/cassettes/test_smoke_openrouter_qwen3vl_real/: test_qwen3vl_plan_smoke_pipeline_alive.yaml
tests/fixtures/: dogfood_publish.html  edit_append_test.html  edit_contenteditable_test.html
