[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-agent"
version = "0.16.4"
description = "MultiOn-style 高度拟人 AI web agent (Python + Playwright + VLM/SoM + stealth, multi-LLM)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97,<1",
    "playwright>=1.59,<2",
    "playwright-stealth>=2.0.3",
    "pillow>=10.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=2.33,<3"]
all = ["openai>=2.33,<3"]

[project.scripts]
web-agent = "web_agent.cli:main"
web-agent-replay = "web_agent.replay:main"
web-agent-memory = "web_agent.memory:main"
web-agent-mcp = "web_agent.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/web_agent"]

[dependency-groups]
dev = [
    "mcp[cli]>=1.10,<2",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-recording>=0.13.4",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"
