[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-agent"
version = "0.47.1"
description = "MultiOn-style 高度拟人 AI web agent (Python + Playwright + VLM/SoM + stealth, multi-LLM)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["web-agent", "playwright", "browser-automation", "mcp", "claude", "anthropic", "set-of-mark", "stealth", "multion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.97,<1",
    "playwright>=1.59,<2",
    "playwright-stealth>=2.0.3",
    "pillow>=10.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
openai = ["openai>=2.33,<3"]
keyring = ["keyring>=25,<26"]  # V0.31.0: vault KeyringSecretStore 真实现, opt-in extra (Linux 需 dbus+libsecret)
all = ["openai>=2.33,<3", "keyring>=25,<26"]

[project.scripts]
web-agent = "web_agent.cli:main"
web-agent-chain = "web_agent.cli:chain_main"
web-agent-replay = "web_agent.replay:main"
web-agent-memory = "web_agent.memory:main"
web-agent-mcp = "web_agent.mcp_server:main"
web-agent-vault = "web_agent.vault:main"
web-agent-jd = "web_agent.jd_extract:main"
web-agent-list-jds = "web_agent.list_extract:main"
web-agent-eval = "eval.cli:main"
web-agent-token-baseline = "eval.token_baseline:main"
web-agent-perceive-bench = "eval.perceive_bench:main"
web-agent-disk-baseline = "eval.disk_baseline:main"

[tool.hatch.build.targets.wheel]
packages = ["src/web_agent", "eval"]

[dependency-groups]
dev = [
    "mcp[cli]>=1.10,<2",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-recording>=0.13.4",
    "ruff>=0.7",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: real browser test (chromium.launch), opt-in via WEB_AGENT_RUN_SLOW=1; default skip",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/web_agent", "eval"]
exclude = ["tests/", "demos/"]

[[tool.mypy.overrides]]
module = ["playwright_stealth", "playwright_stealth.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["vcr", "vcr.*"]
ignore_missing_imports = true
